  in the try block.

* Fixed extremely long processing of long lines with comma's.

  Closes #5483

* Fixed crash on properties and inherited class methods when comparing them for
  equality against an empty dict.

  Closes #5646

* Fixed a false positive for ``assigning-non-slot`` when the slotted class
  defined ``__setattr__``.

  Closes #3793

* Fixed false positive for ``used-before-assignment`` with self-referential type
  annotation in conditional statements within class methods.

  Closes #5499

* Add checker ``redefined-slots-in-subclass``: Emitted when a slot is redefined in a subclass.

  Closes #5617

* Fixed false positive for ``global-variable-not-assigned`` when the ``del`` statement is used

  Closes #5333

* By default, pylint does no longer take files starting with ``.#`` into account. Those are
  considered `emacs file locks`. See
  https://www.gnu.org/software/emacs/manual/html_node/elisp/File-Locks.html.
  This behavior can be reverted by redefining the ``ignore-patterns`` option.

  Closes #367

* Fixed a false positive for ``used-before-assignment`` when a named expression
  appears as the first value in a container.

  Closes #5112

* ``used-before-assignment`` now assumes that assignments in except blocks
  may not have occurred and warns accordingly.

  Closes #4761

* When evaluating statements after an except block, ``used-before-assignment``
  assumes that assignments in the except blocks took place if the
  corresponding try block contained a return statement.

  Closes #5500

* Fixed a false negative for ``used-before-assignment`` when some but not all
  except handlers defined a name relied upon after an except block when the
  corresponding try block contained a return statement.

  Closes #5524

* When evaluating statements in the ``else`` clause of a loop, ``used-before-assignment``
  assumes that assignments in the except blocks took place if the
  except handlers constituted the only ways for the loop to finish without