@@ -16,3 +16,17 @@ A.__class__ = set
 A.__class__ = defaultdict
 A.__class__ = defaultdict(str)  # [invalid-class-object]
 A.__class__ = 1  # [invalid-class-object]
+
+
+# Here, ambiguity is found when inferring self.__class__
+class C:
+    @classmethod
+    def _new_instance(cls):
+        obj = C()
+        obj.__class__ = cls
+        return obj
+
+    def __deepcopy__(self, memo):
+        obj = C()
+        obj.__class__ = self.__class__
+        return obj
